# hexbot-building-framework

./: .gitignore  README.md  benchmark.py  benchmark_nn.py  bot.py  dashboard.py  engine.c  hexbot.py  hexgame.py  pyproject.toml  test_dashboard.py
docs/: advanced.md  api-reference.md  configuration.md  orca.md  sft-guide.md  training-guide.md
examples/: bot_vs_bot.py  custom_eval.py  dashboard_arena.py  dashboard_custom_bot.py  dashboard_train.py  evolutionary.py  play_random.py  train_bot.py
orca/: __init__.py  config.py  curriculum.py  data.py  distributed.py  encoding.py  ensemble.py  hex_conv.py  hex_gnn.py  leaderboard.py  multiscale_net.py  network.py  openings.py  scrape.py  search.py  sft.py  solver.py  threats.py  train.py  transformer_net.py  zoo.py
tests/: run_all.py  test_bot.py  test_game.py  test_network.py  test_orca.py  test_training.py
